--- a/gutendex/gutendex/.env
+++ b/gutendex/gutendex/.env
@@ -1,7 +1,7 @@
 ADMIN_EMAILS=you@your.domain.here
 ADMIN_NAMES=You
 ALLOWED_HOSTS=127.0.0.1,localhost,.your.domain.here
-DATABASE_HOST=127.0.0.1
+DATABASE_HOST=post_db
 DATABASE_NAME=gutendex
 DATABASE_PASSWORD=password
 DATABASE_PORT=5432
