--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,8 @@ services:
     container_name: app
     build: .
     depends_on:
-      - post_db
+      post_db:
+        condition: service_healthy
 
 
   post_db:
@@ -26,9 +27,13 @@ services:
        - POSTGRES_USER=gutendex
        - POSTGRES_PASSWORD=password
        - PGDATA=/var/lib/postgresql/data/pgdata
-      
     volumes:
       - dvir:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
 
 
