--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,8 @@ services:
   app:
     container_name: app
     build: .
+    ports:
+      - 8080:8080
     depends_on:
       post_db:
         condition: service_healthy
