trying docker compose

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -10,8 +10,8 @@ upstream backend {
     listen 80;
   
     location / {
-        root /app; 
-        index templates/index.html;
+        # root /app; 
+        # index templates/home.html;
         try_files $uri $uri/ @backend;
     }
 
