trying docker compose

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -9,14 +9,14 @@ upstream backend {
   server {
     listen 80;
   
-    location / {
-        # root /app; 
-        # index templates/home.html;
-        try_files $uri $uri/ @backend;
-    }
+    # location / {
+    #     root /app; 
+    #     index templates/home.html;
+    #     try_files $uri $uri/ @backend;
+    # }
 
     
-    location @backend {
+    location / {
         proxy_pass         http://backend;
         
         proxy_redirect     off;
