--- a/gutendex/gutendex/.env
+++ b/gutendex/gutendex/.env
@@ -15,4 +15,4 @@ MANAGER_EMAILS=someone@their.domain.here
 MANAGER_NAMES=Someone
 MEDIA_ROOT=/var/www/gutendex/media/
 SECRET_KEY=another-long-string-of-random-characters
-STATIC_ROOT=/static
+STATIC_ROOT=/var/www/gutendex/static-root/
