still trying docker with nginx

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -8,16 +8,17 @@ upstream backend {
 
   server {
     listen 80;
+    root /usr/share/nginx/html;
+
   
-    # location / {
-    #     root /app; 
-    #     index templates/home.html;
-    #     try_files $uri $uri/ @backend;
-    # }
+    location / {
+        add_header From  "nginx";
+        try_files $uri @backend;
+    }
 
     
-    location / {
-        proxy_pass         http://backend;
+    location @backend {
+        proxy_pass         http://app:8000;
         
         proxy_redirect     off;
         proxy_set_header   Host             $host;
