--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,8 +10,8 @@ services:
       - app
     volumes:
       - "./nginx/nginx.conf:/etc/nginx/conf.d/default.conf" 
-      - "./progect/static:/app/static"
-      - "./progect/gutendex/templates:/app/gutendex/templates"
+      - "./progect/static:/usr/share/nginx/html"
+      - "./progect/gutendex/templates:/usr/share/nginx/html/gutendex/templates"
   
   app:
     container_name: app
