--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -12,8 +12,8 @@ upstream backend {
 
   
     location / {
-        add_header From  "nginx";
-        try_files $uri @backend;
+        index  /gutendex/templates/home.html;
+        try_files /static/$uri @backend;
     }
 
     
