--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     volumes:
       - "./nginx/nginx.conf:/etc/nginx/conf.d/default.conf" 
       - "./gutendex/static:/usr/share/nginx/html/static"
-      - "./gutendex/templates:/usr/share/nginx/html/gutendex/templates"
+      - "./gutendex/templates/:/usr/share/nginx/html/gutendex/templates"
   
   app:
     container_name: app
