--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -13,7 +13,7 @@ upstream backend {
   
     location / {
         index  /gutendex/templates/home.html;
-        try_files /static/$uri @backend;
+        try_files /static/$uri /static/$uri/ @backend;
     }
 
     
