working at last

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -16,6 +16,9 @@ upstream backend {
         try_files $uri $uri/ @backend;
     }
 
+    location /books {
+        proxy_pass         http://app:8000;
+    }
     
     location @backend {
         proxy_pass         http://app:8000;
