working at last

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -19,6 +19,10 @@ upstream backend {
     location /books {
         proxy_pass         http://app:8000;
     }
+
+    location /favicon {
+        proxy_pass         http://app:8000;
+    }
     
     location @backend {
         proxy_pass         http://app:8000;
