whats working is working

--- a/gutendex/gutendex/.env
+++ b/gutendex/gutendex/.env
@@ -1,6 +1,6 @@
 ADMIN_EMAILS=you@your.domain.here
 ADMIN_NAMES=You
-ALLOWED_HOSTS=127.0.0.1,localhost,.your.domain.here
+ALLOWED_HOSTS=127.0.0.1,localhost,app
 DATABASE_HOST=post_db
 DATABASE_NAME=gutendex
 DATABASE_PASSWORD=password
