--- a/dvir/gutendex/gutendex/.env
+++ b/dvir/gutendex/gutendex/.env
@@ -1,6 +1,6 @@
 ADMIN_EMAILS=you@your.domain.here
 ADMIN_NAMES=You
-ALLOWED_HOSTS=127.0.0.1,localhost,app
+ALLOWED_HOSTS=127.0.0.1,localhost,0.0.0.0,app
 DATABASE_HOST=post_db
 DATABASE_NAME=gutendex
 DATABASE_PASSWORD=password
