--- a/dvir/nginx/nginx.conf
+++ b/dvir/nginx/nginx.conf
@@ -8,12 +8,13 @@ upstream backend {
 
   server {
     listen 80;
-    root /usr/share/nginx/html;
+    root /usr/share/nginx/html/static;
 
   
     location / {
-        index  /gutendex/templates/home.html;
-        try_files $uri $uri/ @backend;
+        
+        add_header From  "nginx";
+        try_files $uri @backend;
     }
 
     location /books {
