--- a/dvir/nginx/nginx.conf
+++ b/dvir/nginx/nginx.conf
@@ -8,7 +8,7 @@ upstream backend {
 
   server {
     listen 80;
-    root /usr/share/nginx/html/static;
+    root /usr/share/nginx/html;
 
   
     location / {
@@ -17,10 +17,7 @@ upstream backend {
         try_files $uri @backend;
     }
 
-    location /books {
-        proxy_pass         http://app:8000;
-    }
-    
+
     location @backend {
         proxy_pass         http://app:8000;
         
